Fix word-wrap in review meta values (fix #44)

--- a/app/styles/_reviews.scss
+++ b/app/styles/_reviews.scss
@@ -242,6 +242,15 @@
           padding-right: 20px;
         }
 
+        .content-values {
+          width: 605px;
+          word-break: break-all;
+          word-break: break-word;
+          -webkit-hyphens: auto;
+          -moz-hyphens: auto;
+          hyphens: auto;
+        }
+
       }
     }
   }
